--- a/be/pom.xml
+++ b/be/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>sis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>sis</name>
-	<description>sis</description>
+	<description>sis-oki</description>
 	<url/>
 	<licenses>
 		<license/>
